@@ -1,28 +1,38 @@
 package sn.uasz.utilisateursapi.services;
 
-
-import lombok.RequiredArgsConstructor;
+import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.context.annotation.Bean;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import sn.uasz.utilisateursapi.dtos.EnseignantDTO;
 import sn.uasz.utilisateursapi.entities.Enseignant;
+import sn.uasz.utilisateursapi.exceptions.ConflitEtatException;
+import sn.uasz.utilisateursapi.exceptions.EnseignantException;
+import sn.uasz.utilisateursapi.exceptions.EnseignantNotFoundException;
 import sn.uasz.utilisateursapi.mappers.EnseignantMapper;
 import sn.uasz.utilisateursapi.repositories.EnseignantRepository;
+import sn.uasz.utilisateursapi.services.EnseignantService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
+@Transactional
+@AllArgsConstructor
 @Slf4j
-public class EnseignantService {
+public class EnseignantService  {
+
+    private static final String ENSEIGNANT_NOT_FOUND_MSG = "Enseignant non trouvé";
 
     private final EnseignantRepository enseignantRepository;
     private final EnseignantMapper enseignantMapper;
 
     public EnseignantDTO ajouterEnseignant(EnseignantDTO enseignantDTO) {
         log.info("Ajout d'un nouvel enseignant: {}", enseignantDTO);
+
+        if (enseignantRepository.existsByEmail(enseignantDTO.email())) {
+            throw new EnseignantException("Email déjà utilisé : " + enseignantDTO.email());
+        }
+
         Enseignant enseignant = enseignantMapper.toEntity(enseignantDTO);
         Enseignant savedEnseignant = enseignantRepository.save(enseignant);
         return enseignantMapper.toDTO(savedEnseignant);
@@ -33,20 +43,20 @@ public class EnseignantService {
         return enseignantRepository.findAll()
                 .stream()
                 .map(enseignantMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public EnseignantDTO obtenirEnseignantParId(Long id) {
         log.info("Récupération de l'enseignant avec ID: {}", id);
         return enseignantRepository.findById(id)
                 .map(enseignantMapper::toDTO)
-                .orElseThrow(() -> new RuntimeException("Enseignant non trouvé"));
+                .orElseThrow(() -> new RuntimeException(ENSEIGNANT_NOT_FOUND_MSG));
     }
 
     public EnseignantDTO modifierEnseignant(Long id, EnseignantDTO enseignantDTO) {
         log.info("Modification de l'enseignant avec ID: {}", id);
         Enseignant existingEnseignant = enseignantRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Enseignant non trouvé"));
+                .orElseThrow(() -> new RuntimeException(ENSEIGNANT_NOT_FOUND_MSG));
 
         enseignantMapper.updateEnseignantFromDTO(enseignantDTO, existingEnseignant);
         Enseignant updatedEnseignant = enseignantRepository.save(existingEnseignant);
@@ -63,6 +73,43 @@ public class EnseignantService {
         return enseignantRepository.findByNomContainingIgnoreCase(nom)
                 .stream()
                 .map(enseignantMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public EnseignantDTO activerEnseignant(Long id) throws EnseignantNotFoundException {
+        Enseignant enseignant = enseignantRepository.findById(id)
+                .orElseThrow(() -> new EnseignantNotFoundException(ENSEIGNANT_NOT_FOUND_MSG));
+
+        if (enseignant.isActif()) {
+            throw new ConflitEtatException("L'enseignant est déjà actif");
+        }
+
+        enseignant.setActif(true);
+        return enseignantMapper.toDTO(enseignantRepository.save(enseignant));
+    }
+
+    public EnseignantDTO desactiverEnseignant(Long id) throws EnseignantNotFoundException {
+        Enseignant enseignant = enseignantRepository.findById(id)
+                .orElseThrow(() -> new EnseignantNotFoundException(ENSEIGNANT_NOT_FOUND_MSG));
+
+        if (!enseignant.isActif()) {
+            throw new ConflitEtatException("L'enseignant est déjà inactif");
+        }
+
+        enseignant.setActif(false);
+        return enseignantMapper.toDTO(enseignantRepository.save(enseignant));
+    }
+
+    public List<EnseignantDTO> findAllEnseignants() {
+        return enseignantRepository.findAll()
+                .stream()
+                .map(enseignantMapper::toDTO)
+                .toList();
+    }
+
+    public EnseignantDTO findEnseignantById(Long id) throws EnseignantNotFoundException {
+        return enseignantRepository.findById(id)
+                .map(enseignantMapper::toDTO)
+                .orElseThrow(() -> new EnseignantNotFoundException(ENSEIGNANT_NOT_FOUND_MSG));
     }
 }
