@@ -1,37 +1,40 @@
 package sn.uasz.utilisateursapi.services;
 
-
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.annotation.Validated;
 import sn.uasz.utilisateursapi.dtos.EtudiantDTO;
 import sn.uasz.utilisateursapi.entities.Etudiant;
+import sn.uasz.utilisateursapi.exceptions.EtudiantNotFoundException;
 import sn.uasz.utilisateursapi.mappers.EtudiantMapper;
 import sn.uasz.utilisateursapi.repositories.EtudiantRepository;
-
 
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Random;
 
 @Service
 @Validated
 public class EtudiantService {
-    @Autowired
-    private EtudiantRepository etudiantRepository;
+    private final EtudiantRepository etudiantRepository;
 
-    @Autowired
-    private EtudiantMapper etudiantMapper;
+    private final EtudiantMapper etudiantMapper;
 
     @PersistenceContext
     private EntityManager entityManager;
 
+    private final Random random = new Random();
+
+    public EtudiantService(EtudiantRepository etudiantRepository, EtudiantMapper etudiantMapper) {
+        this.etudiantRepository = etudiantRepository;
+        this.etudiantMapper = etudiantMapper;
+    }
+
     @Transactional
-    public EtudiantDTO ajouterEtudiant(@Validated EtudiantDTO etudiantDTO) {
+    public EtudiantDTO ajouterEtudiant(EtudiantDTO etudiantDTO) {
         Etudiant etudiant = etudiantMapper.toEntity(etudiantDTO);
         // Générer l'email
         String nom = etudiant.getNom();
@@ -46,10 +49,10 @@ public class EtudiantService {
     }
 
     @Transactional
-    public EtudiantDTO modifierEtudiant(int id, @Validated EtudiantDTO etudiantDTO) {
+    public EtudiantDTO modifierEtudiant(int id, EtudiantDTO etudiantDTO) {
         Optional<Etudiant> optionalEtudiant = etudiantRepository.findById((long) id);
         if (!optionalEtudiant.isPresent()) {
-            throw new RuntimeException("Étudiant non trouvé avec l'ID : " + id);
+            throw new EtudiantNotFoundException("Étudiant non trouvé avec l'ID : " + id);
         }
 
         Etudiant etudiant = optionalEtudiant.get();
@@ -60,7 +63,7 @@ public class EtudiantService {
         String email = genererEmail(etudiantDTO.getNom(), etudiantDTO.getPrenom());
         etudiant.setEmail(email);
         etudiant.setPhoto(etudiantDTO.getPhoto());
-        // On ne modifie pas createat et createby
+        // On ne modifie pas createAt et createby
 
         // Détacher l'entité pour éviter les problèmes de transaction
         entityManager.detach(etudiant);
@@ -73,7 +76,7 @@ public class EtudiantService {
     public void supprimerEtudiant(int id) {
         Optional<Etudiant> optionalEtudiant = etudiantRepository.findById((long) id);
         if (!optionalEtudiant.isPresent()) {
-            throw new RuntimeException("Étudiant non trouvé avec l'ID : " + id);
+            throw new EtudiantNotFoundException("Étudiant non trouvé avec l'ID : " + id);
         }
 
         Etudiant etudiant = optionalEtudiant.get();
@@ -89,7 +92,7 @@ public class EtudiantService {
     public EtudiantDTO obtenirEtudiant(int id) {
         Optional<Etudiant> optionalEtudiant = etudiantRepository.findById((long) id);
         if (!optionalEtudiant.isPresent()) {
-            throw new RuntimeException("Étudiant non trouvé avec l'ID : " + id);
+            throw new EtudiantNotFoundException("Étudiant non trouvé avec l'ID : " + id);
         }
 
         Etudiant etudiant = optionalEtudiant.get();
@@ -105,7 +108,7 @@ public class EtudiantService {
         List<Etudiant> etudiants = etudiantRepository.findAll();
         return etudiants.stream()
                 .map(etudiantMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // Méthode pour générer l'email
@@ -113,7 +116,7 @@ public class EtudiantService {
         String premiereLettrePrenom = prenom.substring(0, 1).toLowerCase();
         String premiereLettreNom = nom.substring(0, 1).toLowerCase();
         //Générer un nombre aléatoire
-        int numeroAleatoire = (int) (Math.random() * 100);
+        int numeroAleatoire = random.nextInt(100);
         return nom.toLowerCase() + premiereLettrePrenom + premiereLettreNom + numeroAleatoire + "@zig.univ.sn";
     }
 }
